--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-pdf": "^7.5.1",
+    "react-pdf-viewer": "^0.1.0",
+    "react-pdfjs": "^1.0.7",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
